src/components/App.css
.App {
  text-align: center;
}

html {
  padding: 10px;
}

h1 {
  color: gray;
}

h2 {
  font-size: 1.2em;
}

h3 {
  font-size: 1.1em;
}

.PropName {
  font-weight: bold;
  color: #6264A7;
}

.Logo {
  font-size: 45pt;
  color: #6264A7;
}

.Error {
  color: red;
}

.btn-group-sm .btn-secondary {
  font-size: 0.75em;
}

.dashboard-deck {
  min-height: 60vh;
}

